Flyway で DB の migration を管理

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -351,3 +351,20 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+slick.dbs {
+  default {
+    driver = "slick.driver.PostgresDriver$"
+    db.driver = "org.postgresql.Driver"
+    db.url = "jdbc:postgresql://localhost/playground"
+    db.username = "playscala"
+    db.password = "pla1scal1"
+  }
+  test {
+    driver = "slick.driver.H2Driver$"
+    db.driver = "org.h2.Driver"
+    db.url = "jdbc:h2:mem:play;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE;INIT=runscript from 'test/create.sql'"
+    db.username = ""
+    db.password = ""
+  }
+}
